--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <main role="main">
 
-  <img class="hero" src="images/chicago-skyline-photo-l.jpeg">
+  <img class="hero" src="Images/chicago-skyline-photo-l.jpeg">
 
   <section class="jumbotron text-center">
     <div class="container">
@@ -79,7 +79,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
             <a href="illustrations.html">
-              <img src="images/Artboard 1-100.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+              <img src="Images/Artboard 1-100.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">My illustrations</p>
             </div>
@@ -97,7 +97,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
             <a href="infographics.html">
-              <img src="images/Grahics Project final.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="200%"></a>
+              <img src="Images/Grahics Project final.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="200%"></a>
             <div class="card-body">
               <p class="card-text">My infographics packages</p>
             </div>
@@ -106,7 +106,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
             <a href="videos.html">
-              <img src="images/Unknown.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+              <img src="Images/Unknown.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">My videos</p>
             </div>
