--- a/infographics.html
+++ b/infographics.html
@@ -22,7 +22,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <img src="images/1600453907172 (1).jpeg" width="25%" style="float:left;margin-right:20px;">
+              <img src="Images/1600453907172 (1).jpeg" width="25%" style="float:left;margin-right:20px;">
               <p class="text-muted">Hello! My name is Thomas DeVita and I am a recent gradute from the Media School at Indiana University. I am currently enrolled in a UX/UI Bootcamp at The University of Minnesota and looking for jobs in web design or UX/UI design. I have expereince in digital design, coding, and video editing!</p>
             </div>
             <div class="block">
@@ -58,7 +58,7 @@
 
 <main role="main">
 
-  <img class="hero" src="images/chicago-skyline-photo-l.jpeg">
+  <img class="hero" src="Images/chicago-skyline-photo-l.jpeg">
 
   <section class="jumbotron text-center">
     <div class="container">
@@ -77,8 +77,8 @@
       <div class="row">
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
-            <a href="images/info_graphics_final.pdf">
-              <img src="images/Grahics Project final.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+            <a href="Images/info_graphics_final.pdf">
+              <img src="Images/Grahics Project final.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">I completed this graphics tutorial using Illustrator's graphics tool. This graphics project was an add on to my magazine project. I used that same color scheme and decided to create a big boom to emphasize the title. </p>
             </div>
@@ -86,8 +86,8 @@
         </div>
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
-            <a href="images/convert-jpg-to-pdf.net_2019-12-16_18-51-04.pdf">
-              <img src="images/lautrec.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+            <a href="Images/convert-jpg-to-pdf.net_2019-12-16_18-51-04.pdf">
+              <img src="Images/lautrec.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">I completed this graphics tutorial using Photoshops editing tool. In thos image, I was messing around wiht the color hues in order to get a feel of waht they can do. I believe that this picture started way darker and then I made it easier to see.</p>
             </div>
@@ -95,8 +95,8 @@
         </div>
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
-            <a href="images/convert-jpg-to-pdf.net_2019-12-16_18-32-07.pdf">
-              <img src="images/Untitled-2.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+            <a href="Images/convert-jpg-to-pdf.net_2019-12-16_18-32-07.pdf">
+              <img src="Images/Untitled-2.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">I completed this graphics tutorial using Illustrator's graphics tool.  The whole goal here was the develop a some type of poster in any way you could using the provided elements.  I decided th angle my popsicle an dplace the ploygon behind it to give it a wow effect.</p>
             </div>
@@ -104,8 +104,8 @@
         </div>
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
-            <a href="images/convert-jpg-to-pdf.net_2019-12-16_18-32-20.pdf">
-              <img src="images/quickdraw copy.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+            <a href="Images/convert-jpg-to-pdf.net_2019-12-16_18-32-20.pdf">
+              <img src="Images/quickdraw copy.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">I completed this graphics tutorial using Illustrator's graphics tool. When creating the guitar you needed to trace the full guitar and then create it.  I made the clock and the scredriver/screw by using the align tools for most of the lines that I had.</p>
             </div>
