--- a/other.html
+++ b/other.html
@@ -22,7 +22,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <img src="images/1600453907172 (1).jpeg" width="25%" style="float:left;margin-right:20px;">
+              <img src="Images/1600453907172 (1).jpeg" width="25%" style="float:left;margin-right:20px;">
               <p class="text-muted">Hello! My name is Thomas DeVita and I am a recent gradute from the Media School at Indiana University. I am currently enrolled in a UX/UI Bootcamp at The University of Minnesota and looking for jobs in web design or UX/UI design. I have expereince in digital design, coding, and video editing!</p>
             </div>
             <div class="block">
@@ -58,7 +58,7 @@
 
 <main role="main">
 
-  <img class="hero" src="images/chicago-skyline-photo-l.jpeg">
+  <img class="hero" src="Images/chicago-skyline-photo-l.jpeg">
 
   <section class="jumbotron text-center">
     <div class="container">
@@ -78,7 +78,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
             <a href="soccer_game/index.html">
-              <img src="images/Screen Shot 2019-12-16 at 1.42.09 PM.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+              <img src="Images/Screen Shot 2019-12-16 at 1.42.09 PM.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">This is a little game that I created that changes th ecolor of the ball every time it goes inbetween the goal lines.</p>
             </div>
@@ -87,7 +87,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
             <a href="design1/index.html">
-              <img src="images/Screen Shot 2019-12-16 at 1.34.34 PM.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+              <img src="Images/Screen Shot 2019-12-16 at 1.34.34 PM.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">My homework assignment in my web design class where I needed to duplicate the design shown.</p>
             </div>
