--- a/videos.html
+++ b/videos.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <img src="images/IMG_1168.jpeg" alt="icon1" width="25%" style="float:left;margin-right:20px;">
+          <img src="Images/IMG_1168.jpeg" alt="icon1" width="25%" style="float:left;margin-right:20px;">
           <p class="text-muted">Hello! My name is Thomas DeVita and I am a recent gradute from the Media School at Indiana University. I am currently enrolled in a UX/UI Bootcamp at The University of Minnesota and looking for jobs in web design or UX/UI design. I have expereince in digital design, coding, and video editing!</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
