--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <img src="images/1600453907172(1).jpeg" width="25%" style="float:left;margin-right:20px;">
+          <img src="images/1600453907172 (1).jpeg" width="25%" style="float:left;margin-right:20px;">
           <p class="text-muted">Hello! My name is Thomas DeVita and I am a recent gradute from the Media School at Indiana University. I am currently enrolled in a UX/UI Bootcamp at The University of Minnesota and looking for jobs in web design or UX/UI design. I have expereince in digital design, coding, and video editing!</p>
         </div>
         <div class="block">
@@ -66,7 +66,7 @@
       <p class="lead">My graphic design, video, advertising and writing samples </p>
       <p>
         <a href="index.html" class="btn btn-primary my-2">Designs and Graphics</a>
-        <a href="index.html" class="btn btn-primary my-2">UX/UI</a>
+        <a href="uxui.html" class="btn btn-primary my-2">UX/UI</a>
         <a href="other.html" class="btn btn-secondary my-2">My Other Work Examples</a>
       </p>
     </div>
