--- a/uxui.html
+++ b/uxui.html
@@ -106,7 +106,7 @@
               <a href="design1/index.html">
                 <img src="images/Screen Shot 2019-12-16 at 1.34.34 PM.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
               <div class="card-body">
-                <p class="card-text">My homework assignment in my web design class where I needed to duplicate the design shown dsfsdfdsfds.</p>
+                <p class="card-text">My homework assignment in my web design class where I needed to duplicate the design shown dsfsdfdsfgfhdfgdfgfdgfdds.</p>
                 <a href="https://www.figma.com/proto/gbZOxFnIakWyoZoB9kguc5/TCDSA-Redesign?type=design&node-id=622-751&scaling=scale-down&page-id=93%3A162&starting-point-node-id=622%3A751" class="btn btn-primary my-2">View Prototype</a>
                 <a href="https://www.figma.com/file/gbZOxFnIakWyoZoB9kguc5/TCDSA-Redesign?type=design&node-id=0-1&t=CqB0lufUNE7oUrzo-0" class="btn btn-primary my-2">Figma File</a> 
               </div>
