--- a/uxui.html
+++ b/uxui.html
@@ -82,7 +82,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
             <a href="Snatched_Mobile-App-Case-Study.pptx.pdf">
-              <img src="/Images/cover_photo.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+              <img src="Images/cover_photo.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">This is a case study my group and I complete where we created an app called 'Snatched' to help when you go shopping!</p>
                 <a href="https://www.figma.com/proto/39gxgUMQpGehLBy3eG0F81/Project-1-Wireframes?type=design&node-id=8-30&scaling=scale-down&page-id=0%3A1&starting-point-node-id=6%3A45" class="btn btn-primary my-2">View Prototype</a>
@@ -93,7 +93,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
             <a href="design1/index.html">
-              <img src="/Images/DSA_cover_photo.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+              <img src="Images/DSA_cover_photo.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">My homework assignment in my web design class where I needed to duplicate the design shown.</p>
               <a href="https://www.figma.com/proto/gbZOxFnIakWyoZoB9kguc5/TCDSA-Redesign?type=design&node-id=622-751&scaling=scale-down&page-id=93%3A162&starting-point-node-id=622%3A751" class="btn btn-primary my-2">View Prototype</a>
