--- a/uxui.html
+++ b/uxui.html
@@ -92,7 +92,7 @@
         </div>
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
-            <a href="design1/index.html">
+            <a href="Twin Cities DSA _ redesign.pdf">
               <img src="Images/DSA_cover_photo.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">My homework assignment in my web design class where I needed to duplicate the design shown.</p>
