--- a/videos.html
+++ b/videos.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-6 shadow-sm">
-            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='images/profile project_final.mov' frameborder='0' allowfullscreen></iframe></div>
+            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='profile project_final.mov' frameborder='0' allowfullscreen></iframe></div>
             <div class="card-body">
               <p class="card-text">This is a video I made for my Multimedia Storytelling class about my mom who loves playing Pokemon Go!</p>
             </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-6 shadow-sm">
-            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='images/Selfie Project.mov' frameborder='0' allowfullscreen></iframe></div>
+            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='Selfie Project.mov' frameborder='0' allowfullscreen></iframe></div>
             <div class="card-body">
               <p class="card-text">This is a video I made for my Multimedia Storytelling class about my interest in bowling!</p>
             </div>
