--- a/uxui.html
+++ b/uxui.html
@@ -84,7 +84,7 @@
             <a href="Snatched_Mobile-App-Case-Study.pptx.pdf">
               <img src="Images/cover_photo.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
-              <p class="card-text">This is a case study my group and I complete where we created an app called 'Snatched' to help when you go shopping!</p>
+              <p class="card-text">This is a case study my group and I completed where we created an app called 'Snatched' to help when you go shopping!</p>
                 <a href="https://www.figma.com/proto/39gxgUMQpGehLBy3eG0F81/Project-1-Wireframes?type=design&node-id=8-30&scaling=scale-down&page-id=0%3A1&starting-point-node-id=6%3A45" class="btn btn-primary my-2">View Prototype</a>
                 <a href="https://www.figma.com/file/39gxgUMQpGehLBy3eG0F81/Project-1-Wireframes?type=design&node-id=0-1&t=GicjttcN2J1WdGQJ-0" class="btn btn-primary my-2">Figma File</a> 
             </div>
@@ -95,13 +95,13 @@
             <a href="Twin Cities DSA _ redesign.pdf">
               <img src="Images/DSA_cover_photo.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
-              <p class="card-text">My homework assignment in my web design class where I needed to duplicate the design shown.</p>
+              <p class="card-text">This is another case study my group and I completed where we did a site redesign of Twin Cities DSA.</p>
               <a href="https://www.figma.com/proto/gbZOxFnIakWyoZoB9kguc5/TCDSA-Redesign?type=design&node-id=622-751&scaling=scale-down&page-id=93%3A162&starting-point-node-id=622%3A751" class="btn btn-primary my-2">View Prototype</a>
               <a href="https://www.figma.com/file/gbZOxFnIakWyoZoB9kguc5/TCDSA-Redesign?type=design&node-id=0-1&t=CqB0lufUNE7oUrzo-0" class="btn btn-primary my-2">Figma File</a> 
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
             <div class="card mb-3 shadow-sm">
               <a href="design1/index.html">
                 <img src="images/Screen Shot 2019-12-16 at 1.34.34 PM.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
@@ -111,7 +111,7 @@
                 <a href="https://www.figma.com/file/gbZOxFnIakWyoZoB9kguc5/TCDSA-Redesign?type=design&node-id=0-1&t=CqB0lufUNE7oUrzo-0" class="btn btn-primary my-2">Figma File</a> 
               </div>
             </div>
-          </div>
+          </div> -->
       </div>
     </div>
   </div>
