--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col-md-3">
           <div class="card mb-3 shadow-sm">
-            <a href="videos.html">
+            <a href="https://www.youtube.com/@tommydevita5249/videos">
               <img src="Images/Unknown.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">My videos</p>
