--- a/illustrations.html
+++ b/illustrations.html
@@ -65,6 +65,7 @@
       <p class="lead">My graphic design, video, advertising and writing samples </p>
       <p>
         <a href="index.html" class="btn btn-primary my-2">Designs and Graphics</a>
+        <a href="uxui.html" class="btn btn-primary my-2">UX/UI</a>
         <a href="other.html" class="btn btn-secondary my-2">My Other Work Examples</a>
       </p>
     </div>
