--- a/illustrations.html
+++ b/illustrations.html
@@ -27,7 +27,7 @@
             <div class="block">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="Resume_3.docx" class="text-muted">Resume Download</a></li>
+                <li><a href="Thomas Devita Resume.23 (1).docx" class="text-muted">Resume Download</a></li>
                 <li><a href="https://www.linkedin.com/in/thomasdevita" class="text-muted">LinkedIn</a></li>
                 <li><a href="mailto:tmdevita@gmail.com" class="text-muted">Email: tmdevita@gmail.com</a></li>
               </ul>
