--- a/other.html
+++ b/other.html
@@ -28,7 +28,7 @@
             <div class="block">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="Resume_3.docx" class="text-muted">Resume Download</a></li>
+                <li><a href="Thomas Devita Resume.23 (1).docx" class="text-muted">Resume Download</a></li>
                 <li><a href="https://www.linkedin.com/in/thomasdevita" class="text-muted">LinkedIn</a></li>
                 <li><a href="mailto:tmdevita@gmail.com" class="text-muted">Email: tmdevita@gmail.com</a></li>
               </ul>
@@ -91,6 +91,15 @@
               <img src="Images/Screen Shot 2019-12-16 at 1.34.34 PM.png" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
             <div class="card-body">
               <p class="card-text">My homework assignment in my web design class where I needed to duplicate the design shown.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-3 shadow-sm">
+            <a href="Episode 3 - Game ChangerFinal_mixdown.wav">
+              <img src="Images/gamechangerpic.jpg" alt="icon1" class="bd-placeholder-img card-img-top" width="100%" height="100%"></a>
+            <div class="card-body">
+              <p class="card-text">This is the third and final episode of the podcast - The Game Changer.</p>
             </div>
           </div>
         </div>
